--- a/.github/workflows/TestAction.yml
+++ b/.github/workflows/TestAction.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - name: Logging
       run: |
-        echo "${{ github.event.head_commit.message )}}"
+        echo "${{ github.event.head_commit.message }}"
