--- a/.github/workflows/TestAction.yml
+++ b/.github/workflows/TestAction.yml
@@ -23,9 +23,9 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: Logging
-    env:
-      MESSAGE: ${{ github.event.head_commit.message }}
-      TITLE: ${{ needs.get-commit-title.outputs.text }}
-      run: |
+    - run: |
         echo "Last commit title was: $TITLE
         echo "Last commit full message was: $MESSAGE
+      env:
+        MESSAGE: ${{ github.event.head_commit.message }}
+        TITLE: ${{ needs.get-commit-title.outputs.text }}
