--- a/.github/workflows/TestAction.yml
+++ b/.github/workflows/TestAction.yml
@@ -28,9 +28,11 @@ jobs:
         echo "Last commit full message was: $MESSAGE"
         echo "Alt: $ALT"
         echo "ANYTHING: $ANYTHING"
+        echo "FINAL: $FINAL"
         echo "${{toJSON(github.event)}}"
       env:
         MESSAGE: ${{ github.event.head_commit.message }}
         TITLE: ${{ needs.get-commit-title.outputs.text }}
         ALT: ${{ github.event.workflow_run.head_commit.message }}
         ANYTHING: ${{ github.event_name }}
+        FINAL: ${{ github.event.repository.commits_url[0] }}
