--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -54,3 +54,13 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+
+  upload:
+    needs: build
+    runs-on: windows-latest
+    steps:
+    - uses: actions/upload-artifact@v4
+      with:
+        name: upload-build
+        path: ${{env.SOLUTION_FILE_PATH}}/MockExternal/bin/${{ inputs.buildConfiguration }}/net7.0-windows
+        if-no-files-found: error
