--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -38,7 +38,6 @@ jobs:
 
   build:
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v4
     
@@ -61,7 +60,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: build-${{ github.sha }}-{{ $TIMESTAMP }} # Artifact name. Must be unique, so mix in commit hash and timestamp.
+        name: build-${{ github.sha }}-${{ TIMESTAMP }} # Artifact name. Must be unique, so mix in commit hash and timestamp.
         path: ${{env.SOLUTION_FILE_PATH}}/MockExternal/bin/${{ inputs.buildConfiguration }}/net7.0-windows
         if-no-files-found: error
 
